--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "description": "app",
   "license": "MIT",
   "devDependencies": {
- "grunt": "~0.4.1",
- "grunt-contrib-jshint": "~0.6.3",
- "grunt-contrib-concat": "~0.3.0",
- "grunt-contrib-cssmin":"^0.3.2",
- "grunt-contrib-uglify": "~0.2.1",
- "grunt-contrib-requirejs": "~0.4.1",
- "grunt-contrib-copy": "~0.4.1",
- "grunt-contrib-clean": "~0.5.0",
- "grunt-strip": "~0.2.1"
- 
+    "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.5.0",
+    "grunt-contrib-htmlmin": "^0.6.0",
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-sass": "^0.9.0",
+    "grunt-contrib-uglify": "~0.2.1",
+    "grunt-strip": "~0.2.1"
   },
   "dependencies": {
     "express": "3.x"
   },
   "repository": {
-      "type" : "git",
-      "url" : "git@github.com:piaoxuelia/lxapp.git"
+    "type": "git",
+    "url": "git@github.com:piaoxuelia/lxapp.git"
   }
 }
